[gd_scene load_steps=11 format=2]

[ext_resource path="res://themes/darktheme/darktheme.theme" type="Theme" id=1]
[ext_resource path="res://src/dreamscape/CardLibrary/CardLibrary.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/dreamscape/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://themes/darktheme/fonts/Bangers/Bangers-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/dreamscape/MainMenu/NewGame.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/Butler/Butler_Bold.otf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[node name="Menu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardLibrary" parent="." instance=ExtResource( 2 )]
custom_styles/panel = SubResource( 1 )
property_width_exceptions = {
"Cost": 30
}

[node name="NewGame" parent="." instance=ExtResource( 5 )]

[node name="ReadMe" type="PopupPanel" parent="."]
margin_right = 4.0
margin_bottom = 4.0

[node name="Label" type="Label" parent="ReadMe"]
margin_left = 2.0
margin_top = 2.0
margin_right = 102.0
margin_bottom = 102.0
rect_min_size = Vector2( 100, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
margin_right = 1024.0
margin_bottom = 768.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[node name="VBox" type="VBoxContainer" parent="MainMenu"]
margin_right = 1024.0
margin_bottom = 768.0

[node name="Margin" type="MarginContainer" parent="MainMenu/VBox"]
margin_right = 1024.0
margin_bottom = 369.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 90

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/VBox/Margin"]
margin_top = 90.0
margin_right = 1024.0
margin_bottom = 369.0

[node name="Title" type="Label" parent="MainMenu/VBox/Margin/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
text = "Hypnagonia"
align = 1

[node name="Subtitle" type="Label" parent="MainMenu/VBox/Margin/VBoxContainer"]
margin_top = 84.0
margin_right = 1024.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 3 )
text = "Therapy through Nightmares"
align = 1

[node name="Center" type="CenterContainer" parent="MainMenu/VBox"]
margin_top = 372.0
margin_right = 1024.0
margin_bottom = 741.0
size_flags_vertical = 3

[node name="VButtons" type="VBoxContainer" parent="MainMenu/VBox/Center"]
margin_left = 416.0
margin_top = 94.0
margin_right = 608.0
margin_bottom = 274.0
rect_min_size = Vector2( 192, 0 )
custom_constants/separation = 10

[node name="NewGame" type="Button" parent="MainMenu/VBox/Center/VButtons"]
margin_right = 192.0
margin_bottom = 28.0
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuickStart" type="Button" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 38.0
margin_right = 192.0
margin_bottom = 66.0
text = "Quick Start"

[node name="CardLibrary" type="Button" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 76.0
margin_right = 192.0
margin_bottom = 104.0
text = "Card Library"

[node name="Readme" type="Button" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 114.0
margin_right = 192.0
margin_bottom = 142.0
text = "Read Me"

[node name="Exit" type="Button" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 152.0
margin_right = 192.0
margin_bottom = 180.0
text = "Exit"

[node name="Version" type="Label" parent="MainMenu/VBox"]
margin_top = 744.0
margin_right = 1024.0
margin_bottom = 768.0
text = "v0.14.0"
align = 2

[node name="MenuTween" type="Tween" parent="."]

[node name="FadeToBlack" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
